# hri_actions_msgs-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
action/: PointTrajectory.action  SelfPresentation.action
debian/: changelog  control  copyright  gbp.conf  rules
msg/: ActivityList.msg  ClosedCaption.msg  Intent.msg
rpm/: ros-jazzy-hri-actions-msgs.spec  template.spec
srv/: ListActivities.srv
